# DesignPatternByCpp

./: .gitignore  README.md
06.Singleton/2.code/: Singleton.h  main.cpp
20.ObserverPattern/: CMakeLists.txt
20.ObserverPattern/2.Code/: Demo.h
20.StrategyPattern/2.Code/: Context.h  Strategy.h  main.cpp
22.StrategyPattern/: README.md  main.cpp
22.StrategyPattern/2.Code/inc/: strategy.h
23.TemplateMethodPattern/: CMakeLists.txt  README.md
23.TemplateMethodPattern/2.Code/: Demo.h  FingerPrintModule.h  main.cpp
24.VisitorPattern/: VisitorPattern.pro  demo.h  demo.h.autosave
24.VisitorPattern/inc/: demo.h
